Added snpedia article concept

--- a/config/resque.yml
+++ b/config/resque.yml
@@ -4,3 +4,16 @@ port: 6379
 
 # Namespace of the application in Redis
 namespace: 'resque:Snpedia'
+
+schedules:
+  read_snp_details:
+    every: 60s
+    # you can use rufus-scheduler "every" syntax in place of cron if you prefer
+    # every: 1h
+    # By default the job name (hash key) will be taken as worker class name.
+    # If you want to have a different job name and class name, provide the 'class' option
+    class: SnpediaReadSnpDetailsJob
+    queue: read_snp_details
+    args:
+    description: "This job queues all content for indexing in solr"
+|
